--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -197,3 +197,29 @@ body {
   -ms-overflow-style: none;  /* IE and Edge */
   overflow: auto; /* Makes sure scrolling is enabled */
 }
+
+@keyframes scroll-left {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+@keyframes scroll-right {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
+
+.animate-scroll-left {
+  animation: scroll-left 15s linear infinite;
+}
+
+.animate-scroll-right {
+  animation: scroll-right 15s linear infinite;
+}
