--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -198,6 +198,32 @@ body {
   overflow: auto; /* Makes sure scrolling is enabled */
 }
 
+/* styles/globals.css */
+
+/* Default scrollbar styles */
+::-webkit-scrollbar {
+  width: 6px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #a0aec0;
+  border-radius: 10px;
+  transition: width 0.3s ease; /* Smooth transition when hovered */
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f7fafc;
+}
+
+/* Increase width on hover */
+::-webkit-scrollbar:hover {
+  width: 12px;
+  height: 12px;
+}
+
+
+
 @keyframes scroll-left {
   0% {
     transform: translateX(0%);
