--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -187,41 +187,30 @@ body {
   display: none;
 }
 
-/* Hide scrollbar for Firefox */
 .scrollbar-none {
-  scrollbar-width: none; /* Firefox */
+  scrollbar-width: none;
 }
 
-/* Ensure scrolling is still enabled */
 .scrollbar-none {
-  -ms-overflow-style: none;  /* IE and Edge */
-  overflow: auto; /* Makes sure scrolling is enabled */
+  -ms-overflow-style: none;
+  overflow: auto; 
 }
 
-/* styles/globals.css */
-
-/* Default scrollbar styles */
 ::-webkit-scrollbar {
   width: 6px;
   height: 8px;
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-corner {
+  background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
   background-color: #a0aec0;
   border-radius: 10px;
-  transition: width 0.3s ease; /* Smooth transition when hovered */
+  transition: width 0.3s ease; 
 }
-
-::-webkit-scrollbar-track {
-  background-color: #f7fafc;
-}
-
-/* Increase width on hover */
-::-webkit-scrollbar:hover {
-  width: 12px;
-  height: 12px;
-}
-
 
 @keyframes scroll-left {
   0% {
