columns error fixed

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -189,7 +189,6 @@ body {
 
 .scrollbar-none {
   scrollbar-width: none;
-
 }
 
 .scrollbar-none {
@@ -205,8 +204,6 @@ body {
 
 ::-webkit-scrollbar-corner {
   background-color: transparent;
-
-
 }
 
 ::-webkit-scrollbar-thumb {
@@ -221,7 +218,7 @@ body {
 
 /* Optional for Firefox */
 * {
-  scrollbar-color: black transparent;
+  scrollbar-color: lightgray transparent;
 }
 
 
